[package]
name = "ingress-collector"
version = "0.1.0"
authors = ["Glassyiris <coloredflowers@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"